--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,3 +1,27 @@
 header {
-  back
+  background-color: $primary;
+  padding: 15px 15px 0 15px;
+  color: white;
+  h1 {
+    font-size: 2.25rem;
+    text-align: center;
+  }
+  nav {
+    ul {
+      display: flex;
+      justify-content: end;
+      li {
+        a {
+          margin: 15px 5px 0 5px;
+          padding-bottom: 15px;
+          color: white;
+          font-size: 0.875rem;
+          font-weight: normal;
+          &:hover {
+            background-color: $terciary;
+          }
+        }
+      }
+    }
+  }
 }
