--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,46 @@
-@i body {
+header {
+  background-color: rgb(19, 112, 19);
+  padding: 15px 15px 0 15px;
+  color: white;
+}
+header h1 {
+  font-size: 2.25rem;
+  text-align: center;
+}
+header nav ul {
+  display: flex;
+  justify-content: end;
+}
+header nav ul li a {
+  margin: 15px 5px 0 5px;
+  padding-bottom: 15px;
+  color: white;
+  font-size: 0.875rem;
+  font-weight: normal;
+}
+header nav ul li a:hover {
+  background-color: rgb(7, 65, 7);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+}
+
+body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
 }
+
 a {
   text-decoration: none;
   font-weight: bold;
 }
 a:hover {
   text-decoration: underline;
+}
+
+ul li {
+  list-style-type: none;
 }/*# sourceMappingURL=index.css.map */
