--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,8 +1,13 @@
 //comentários como em JS
 
+@import './variables.scss';
 @import './header';
 
-$primary: green;
+* {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -14,5 +19,11 @@ a {
   font-weight: bold;
   &:hover {
     text-decoration: underline;
+  }
+}
+
+ul {
+  li {
+    list-style-type: none;
   }
 }
